# src/routes/categories.routes.js
@@ -1,9 +1,12 @@
 import { Router } from 'express';
+import CategoryController from '../controllers/category.controller.js';
 
 const router = Router();
 
-router.get('/', (req, res) => {
-  res.send('Hello World!');
-});
+router.get('/', CategoryController.getCategories);
+router.post('/', CategoryController.createCategory);
+router.get('/:id', CategoryController.getCategoryById);
+router.put('/:id', CategoryController.updateCategory);
+router.delete('/:id', CategoryController.deleteCategory);
 
 export default router;
